2009-02-18  Benjamin Lindner  <lindnerb@users.sourceforge.net>

	* docs/gnuplot.doc:  Do not use an explicit extension in the names of
	figures to be processed by {pdf}latex.

2009-02-16  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c:  Make variable definition comply with C standard.

	* docs/gnuplot.doc docs/titlepag.tex term/cgm.trm term/canvas.trm:
	Resolve duplicate index entries.  Add current version to title.

2009-02-15  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term_api.h src/term.c (set_term) set.c (set_terminal):
	Allow a string variable containing the requested terminal type.
	E.g.  screen = 'x11';  set term screen

2009-02-15  Petr Mikulik  <mikulik@physics.muni.cz>

	SF Patch #2570385: GPVAL_TERM_WINDOWID
	This patch adds automatic variable GPVAL_NAME_WINDOWID, which
	contains ID of the current window running under X11 (e.g. x11 and wxt
	terminals).

	* src/eval.c (update_gpval_variables): Update GPVAL_TERM_WINDOWID.

	* src/gadgets.h src/gadgets.c: New global variable current_x11_windowid
	to be filled by terminals running on X11 (x11, wxt, qt, ...).

	* src/mouse.c (do_event): Set global current_x11_windowid from ge->winid
	and call update_gpval_variables() to update GPVAL_TERM_WINDOWID.

	* src/gplt_x11.c (gp_execute_GE_plotdone): New routine to replace direct
	call of gp_exec_event(GE_plotdone, ..., {0|X11 Window ID}) to notify
	gnuplot of changed X11 Window ID.

2009-02-14  Ethan A Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc docs/plotstyles.gnu:  Add a figure showing the use
	of image mode to create a heat map. Add a "heatmap" entry to the index.

2009-02-11  Petr Mikulik  <mikulik@physics.muni.cz>

	* config/makefile.mgw: Use $(CC) instead of gcc to compile pgnuplot.

2009-02-07  Ethan A Merritt  <merritt@u.washington.edu>

	* term/x11.trm (X11_options): Call term->init() rather than X11_init(),
	since the options routine is shared by x11 and xlib drivers.
